--- a/.gitignore
+++ b/.gitignore
@@ -1028,3 +1028,4 @@ webcomponentsjs/webcomponents-lite.js
 webcomponentsjs/webcomponents-lite.min.js
 webcomponentsjs/webcomponents.js
 webcomponentsjs/webcomponents.min.js
+.idea/inspectionProfiles/profiles_settings.xml
